--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "element-ui": "^2.5.4",
+    "gsap": "^2.1.2",
     "vue": "^2.6.6",
-    "vue-router": "^3.0.2"
+    "vue-router": "^3.0.2",
+    "vue-stripe-elements-plus": "^0.2.9"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.4.0",
