--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "element-china-area-data": "^4.1.2",
     "element-ui": "^2.5.4",
     "gsap": "^2.1.2",
     "vue": "^2.6.6",
